@@ -14,6 +14,16 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+17 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-22)
+----------------------------------------------------------
+- G4ContinuumGammaTransition - removed normC factor which has no effect
+    (return to 10.0 algorithm)
+- G4FermiFragmentPool - fixed memory leak at destruction; fixed energy
+    or several excited levels to be the same in the gamma level database
+- G4E1Probability - removed factor 3 in photon emission probability
+- G4B10GEMProbability, G4B11GEMProbability nuclear level energies are 
+    changed to be the same as in the gamma level database
+
 12 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-21)
 ----------------------------------------------------------
 - G4ContinuumGammaTransition - added factor 3 to probability of
